<resources>
    <string name="app_name">Travel</string>
    <string name="specials">Specials</string>
    <string name="initial_banner_packages">Initial banner packages</string>
    <string name="brazil">Brazil</string>
    <string name="_2_days">2 dias</string>
    <string name="final_price">Preço final:</string>
    <string name="confirm_payment">Realizar Pagamento</string>
    <string name="mock_price">R$ 243,99</string>
    <string name="image_of_package">Imagem do Pacote</string>
    <string name="mask_for_cardname">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="payment_guide_message">Digite as informações de cartão de crédito que você deseja utilizar para pagamento</string>
    <string name="purchase_value">Valor da compra:</string>
    <string name="mock_price_value">R$ 421,50</string>
    <string name="hint_card_number">Número do Cartão</string>
    <string name="hint_month">MM</string>
    <string name="hint_year">AA</string>
    <string name="hint_verification_code">CVC</string>
    <string name="button_finish_purchase">FINALIZAR COMPRA</string>
    <string name="card_name">Nome no cartão</string>
    <string name="congrats">Parabéns</string>
    <string name="success_description">Compra realizada com sucesso =D</string>
    <string name="resume_purchase">Confira o resumo da compra:</string>
    <string name="initial_content">Conteúdo Inicial</string>
    <string name="banner_local_image">banner_local_image</string>
</resources>
