<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resume_package_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/image_of_package"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resume_package_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resume_package_image"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resume_package_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_2_days"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/resume_package_local"
        app:layout_constraintTop_toBottomOf="@+id/resume_package_local"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/resume_package_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/resume_package_price"
        app:layout_constraintStart_toStartOf="@+id/resume_package_days"
        app:layout_constraintTop_toBottomOf="@+id/resume_package_days"
        tools:text="08/12 - 10/12 de 2020" />

    <TextView
        android:id="@+id/resume_package_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end"
        android:text="@string/mock_price"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/resume_package_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resume_package_data"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/resume_package_price_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_price"
        app:layout_constraintBottom_toTopOf="@+id/resume_package_price"
        app:layout_constraintEnd_toEndOf="@+id/resume_package_price"
        tools:text="Preço final:" />

    <Button
        android:id="@+id/resume_package_button_confirm_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/orange_button_round"
        android:text="@string/confirm_payment"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Realizar Pagamento" />
</androidx.constraintlayout.widget.ConstraintLayout>